; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_entropy_poll.c_mbedtls_platform_entropy_poll.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_entropy_poll.c_mbedtls_platform_entropy_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"/dev/urandom\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@MBEDTLS_ERR_ENTROPY_SOURCE_FAILED = common dso_local global i32 0, align 4
@has_getrandom = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_platform_entropy_poll(i8* %0, i8* %1, i64 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64*, i64** %9, align 8
  store i64 0, i64* %13, align 8
  %14 = call i32* @fopen(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %14, i32** %10, align 8
  %15 = load i32*, i32** %10, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @MBEDTLS_ERR_ENTROPY_SOURCE_FAILED, align 4
  store i32 %18, i32* %5, align 4
  br label %36

19:                                               ; preds = %4
  %20 = load i8*, i8** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = call i64 @fread(i8* %20, i32 1, i64 %21, i32* %22)
  store i64 %23, i64* %11, align 8
  %24 = load i64, i64* %11, align 8
  %25 = load i64, i64* %8, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %31

27:                                               ; preds = %19
  %28 = load i32*, i32** %10, align 8
  %29 = call i32 @fclose(i32* %28)
  %30 = load i32, i32* @MBEDTLS_ERR_ENTROPY_SOURCE_FAILED, align 4
  store i32 %30, i32* %5, align 4
  br label %36

31:                                               ; preds = %19
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 @fclose(i32* %32)
  %34 = load i64, i64* %8, align 8
  %35 = load i64*, i64** %9, align 8
  store i64 %34, i64* %35, align 8
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %31, %27, %17
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @fread(i8*, i32, i64, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
